--- a/example/components/index.css
+++ b/example/components/index.css
@@ -7,3 +7,19 @@
   padding: 4px;
   cursor: pointer;
 }
+
+.transition-enter {
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+.transition-enter.transition-enter-active {
+  opacity: 1;
+}
+
+.transition-leave {
+  opacity: 1;
+  transition: opacity 250ms ease-in-out;
+}
+.transition-leave.transition-leave-active {
+  opacity: 0;
+}
