--- a/examples/components/index.css
+++ b/examples/components/index.css
@@ -23,3 +23,19 @@
 .transition-leave.transition-leave-active {
   opacity: 0;
 }
+
+.transition-move-up {
+  transform: translate3d(0, 0, 0);
+  transition: transform 250ms ease-in-out;
+}
+.transition-move-up.transition-move-up-active {
+  transform: translate3d(0, 58px, 0);
+}
+
+.transition-move-down {
+  transform: translate3d(0, 0, 0);
+  transition: transform 250ms ease-in-out;
+}
+.transition-move-down.transition-move-down-active {
+  transform: translate3d(0, -58px, 0);
+}
