--- a/examples/components/index.html
+++ b/examples/components/index.html
@@ -19,7 +19,7 @@
 
     <link href="index.css" rel="stylesheet"/>
 
-    <script type="application/javascript" async src="index.js"></script>
+    <script type="text/javascript" async src="index.js"></script>
 
   </head>
 
