--- a/examples/components/index.html
+++ b/examples/components/index.html
@@ -17,9 +17,7 @@
 
     <title>Test</title>
 
-    <link href="index.css" rel="stylesheet"/>
-
-    <script type="text/javascript" async src="index.js"></script>
+    <script type="text/javascript" async src="index.min.js"></script>
 
   </head>
 
