--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -52,7 +52,7 @@ body {
   box-sizing: border-box;
   color:#373737;
   background: #212121;
-  font-size: 16px;
+  font-size: 1.25em;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
@@ -67,30 +67,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 2.5em;
   font-weight: 700;
 }
 
 h2 {
   padding-bottom: 10px;
-  font-size: 32px;
+  font-size: 2.25em;
   background: url('../images/bg_hr.png') repeat-x bottom;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 2em;
 }
-
 h4 {
-  font-size: 21px;
+  font-size: 1.75em;
 }
-
 h5 {
-  font-size: 18px;
+  font-size: 1.5em;
 }
-
 h6 {
-  font-size: 16px;
+  font-size: 1.25em;
 }
 
 p {
@@ -287,29 +284,36 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  /* background: #212121; */
 }
 
 #header_wrap .inner {
+  text-align: center;
   padding: 50px 10px 30px 10px;
+}
+
+#npm_install {
+  text-align: left;
+  background-color: rgba(255, 255, 255, 0.2);
+  display: inline-block;
+  padding: 4px 8px;
+}
+#npm_install p {
+  color: #f1f1f1;
+  margin: 0px;
 }
 
 #project_title {
   margin: 0;
   color: #fff;
-  font-size: 42px;
+  font-size: 3.5em;
   font-weight: 700;
   text-shadow: #111 0px 0px 10px;
 }
 
 #project_tagline {
   color: #fff;
-  font-size: 24px;
+  font-size: 2em;
   font-weight: 300;
   background: none;
   text-shadow: #111 0px 0px 10px;
@@ -355,17 +359,22 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
-  border-top: 1px solid #111;
-  border-bottom: 1px solid #111;
+  /* background: #f2f2f2; */
+  /* border-top: 1px solid #111; */
+  /* border-bottom: 1px solid #111; */
 }
 
 #main_content {
-  padding-top: 40px;
+  background: #f2f2f2;
+  padding: 32px;
 }
 
 #footer_wrap {
   background: #212121;
+}
+
+#footer_wrap p {
+  margin: 0px;
 }
 
 
@@ -375,10 +384,6 @@ Small Device Styles
 *******************************************************************************/
 
 @media screen and (max-width: 480px) {
-  body {
-    font-size:14px;
-  }
-
   #downloads {
     display: none;
   }
@@ -388,38 +393,9 @@ Small Device Styles
     max-width: 480px;
   }
 
-  #project_title {
-  font-size: 32px;
-  }
-
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
-    font-size: 24px;
-  }
-
-  h3 {
-    font-size: 21px;
-  }
-
-  h4 {
-    font-size: 18px;
-  }
-
-  h5 {
-    font-size: 14px;
-  }
-
-  h6 {
-    font-size: 12px;
-  }
-
   code, pre {
     min-width: 320px;
     max-width: 480px;
-    font-size: 11px;
   }
 
 }
